# NeuroTensor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compatible_scalars  compatible_scalars.cpp  main.cpp  neurotensor_repl.cpp  test.h  toolchain-mingw.cmake
.github/workflows/: cmake-archive-clang-ubuntu.yml  cmake-archive-macos-arm64.yml  cmake-archive-macos-intel.yml  cmake-archive-matrix.yml  cmake-archive-musl-ubuntu.yml  cmake-archive-ubuntu.yml  cmake-archive-windows.yml  cmake-multi-platform.yml  cmake-windows-platform.yml  generate_restore_cache_windows.py
UILD_ARCHIVE_FORCE=ON/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
cmake/: ai_sources.cmake  base_dir.cmake  column_space_sources.cmake  core_sources.cmake  detect_simd.cmake  detect_simd_gcc_clang.cmake  detect_simd_msvc.cmake  flags.cmake  fmri_sources.cmake  functional_cpu_sources.cmake  functional_sources.cmake  images_sources.cmake  include_directories.cmake  inv_sources.cmake  linalg_sources.cmake  matmult_sources.cmake  matplot_config.cmake  memory_sources.cmake  mp_sources.cmake  musl.toolchain.cmake  null_space_sources.cmake  qr_sources.cmake  repl_clang.cmake  sparse_sources.cmake  svd_sources.cmake  tbb_config.cmake  tda_sources.cmake  types_sources.cmake  uint128_config.cmake
nt/: Tensor.cpp  Tensor.h  ai.h  nt.h
nt/bit/: bit.h  bit_cast.h  bitset.h  complex_bits.h  float_bits.h  float_bitset.h  kbit_cast.h
nt/convert/: Convert.cpp  Convert.h  floating.h  std_convert.h  utils.h
nt/dtype/: ArrayVoid.cpp  ArrayVoid.h  ArrayVoid.hpp  ArrayVoid_NTensor.hpp  DType.cpp  DType.h  DType_enum.h  DType_old_list.h  DType_operators.cpp  DType_operators.h  Scalar.cpp  Scalar.h  old_convert.h  ranges.cpp  ranges.h
nt/fmri/: fmri.h
nt/functional/: TensorAccessor.h  functional.cpp  functional.h  tensor_get.h  tensorgrad_get.h
nt/images/: image.cpp  image.h
nt/intrusive_ptr/: bad_intrusive_ptr.hpp  intrusive_ptr.hpp  intrusive_tracked_list.hpp  intrusive_variable.hpp
nt/linalg/: QR.cpp  SVD.cpp  adjugate.cpp  column_space.cpp  determinant.cpp  eye.cpp  independent.cpp  inv.cpp  linalg.h  norm.cpp  null_space.cpp  pivots.cpp
nt/math/: kmath.h  math.h
nt/memory/: DeviceEnum.h  SharedCPU_unix.hpp  SharedCPU_win.hpp  bucket.cpp  bucket.h  bucket_cat.h  device.cpp  device.h  iterator.h  memory_limits.h  meta_allocator.h  track_memory.h
nt/mp/: Threading.cpp  Threading.h  iterator_parallel_for_no_parallel.hpp  iterator_parallel_for_parallel.hpp  simde_ops.h  simde_traits.h
nt/nn/: AutoGrad.cpp  AutoGrad.h  BackwardFunc.cpp  BackwardFunc.h  LNN.cpp  LNN.h  Layer.cpp  Layer.h  Loss.cpp  Loss.h  Module.h  Optimizers.cpp  Optimizers.h  ScalarGrad.cpp  ScalarGrad.h  Sequential.h  TensorGrad.cpp  TensorGrad.h  TensorGrad.hpp  forward_Grad.h  forward_Layer.h  functional.cpp  functional.h  functional_class.h  layers.h  old_grad_stuff.h
nt/permute/: permute.cpp  permute.h  permute_old.h
nt/reflection/: bare_metal_reflection.h
nt/refs/: ArrayRef.cpp  ArrayRef.h  SizeRef.cpp  SizeRef.h  intrusive_list.h
nt/sparse/: README.md  SparseCommaOperator.h  SparseData.cpp  SparseData.h  SparseDataMatrix.cpp  SparseDataMatrix.h  SparseMacros.h  SparseMatrix.cpp  SparseMatrix.h  SparseMatrixIterator.hpp  SparseTensor.cpp  SparseTensor.h
nt/tda/: BasisOverlapping.cpp  BasisOverlapping.h  Boundaries.cpp  Boundaries.h  Homology.cpp  Homology.h  MatrixReduction.cpp  MatrixReduction.h  PlotDiagrams.cpp  PlotDiagrams.h  Points.cpp  Points.h  SimplexConstruct.cpp  SimplexConstruct.h  SimplexRadi.cpp  SimplexRadi.h
nt/types/: Cast16.h  README.md  TensorDeclare.h  Types.cpp  Types.h  bfloat16.h  bit_128_integer.h  complex.h  float128.h  float16.h  hash.h  math.h  uint_bool.h
nt/utils/: CommaOperator.cpp  CommaOperator.h  any_ref.h  api_macro.h  bit.h  collect_ri.hpp  macros.h  memory_limits.h  name_func_macro.h  numargs_macro.h  optional.cpp  optional.h  optional_any_tuple.h  optional_except.h  optional_forward.h  optional_list.h  optional_string.h  optional_tensor.h  optional_tensor_variant.h  optional_tensorgrad.h  tensor_holder.h  tuple_or_var.h  type_traits.h  utils.cpp  utils.h  vla_macro.h
src/: CustomOperator.h  Tensor.cpp  Tensor.h  ai.h
src/convert/: Convert.cpp  Convert.h  std_convert.h
src/dtype/: ArrayVoid.cpp  ArrayVoid.h  ArrayVoid.hpp  DType.cpp  DType.h  DType_enum.h  DType_list.cpp  DType_list.h  DType_operators.cpp  Scalar.cpp  Scalar.h  ranges.cpp  ranges.h
src/functional/: SVD.cpp  bf.h  conv_dnn.cpp  conv_std.cpp  functional.cpp  functional.h  functional_conv.cpp  functional_conv.h  functional_fold.cpp  functional_fold.h  functional_matmult.cpp  functional_matmult.h  functional_operator.cpp  functional_operator.h  linalg.cpp  linalg.h  load.cpp  matmult.cpp  matmult_std.cpp  numpy.cpp  numpy.h  save.cpp  tensor_get.h  tensorgrad_get.h  wrbits.h
src/images/: image.cpp
src/intrusive_ptr/: intrusive_ptr.hpp
src/layers/: ActivationFunction.cpp  Conv2d.cpp  Fold.cpp  LNN.cpp  LNN.h  Layer.cpp  Layer.h  LayerGraph.cpp  Linear.cpp  Loss.cpp  Loss.h  Module.cpp  Module.h  Optimizers.cpp  TensorGrad.cpp  TensorGrad.h  TensorGrad.hpp  forward_Layer.h  functional.cpp  functional.h  functional_class.h  layers.h
src/linalg/: QR.cpp  SVD.cpp  adjugate.cpp  column_space.cpp  eye.cpp  (+4 more)
tests/: fmri_test.h  layer_test.h  linalg_test.h  make_pooling.h  nn_tda_test.h  pooling.h  tda_test.h  tensor_test.h  tensorgrad_test.h
then/: ArrayRef.cpp  ArrayRef.h  ArrayVoid.hpp  ArrayVoid_NTensor.hpp  BasisOverlapping.cpp  BasisOverlapping.h  Boundaries.cpp  Boundaries.h  CommaOperator.cpp  Convert.cpp  Convert.h  DType.cpp  DType.h  DType_operators.h  LNN.cpp  Loss.cpp  Loss.h  MatrixReduction.cpp  MatrixReduction.h  Module.h  Optimizers.cpp  Optimizers.h  PlotDiagrams.h  Points.cpp  Points.h  Scalar.cpp  ScalarGrad.cpp  SharedCPU_win.hpp  SparseCommaOperator.h  SparseData.cpp  SparseData.h  SparseDataMatrix.cpp  SparseDataMatrix.h  SparseMacros.h  SparseMatrixIterator.hpp  SparseTensor.cpp  TensorAccessor.h  TensorGrad.cpp  TensorGrad.hpp  Types.cpp  (+20 more)
(+1560 files in other folders)
